# Formal-Verification-Template-C

./: .gitignore  02-feature-request.yml  04-verification-divergence.yml  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: 04-verification-divergence.yml  05-oracle-proof-issue.yml
.github/workflows/: 01-bug-report.yml  03-build-issue.yml  05-oracle-proof-issue.yml  build-and-verify.yml  c_build_test.yml  ci.yml
cmake/: CompilerStandards.cmake  Functions.cmake
coverage_artifacts/: coverage.info  example.c.gcov  main.c.gcov  multiply.cpp.gcov
coverage_artifacts/html/: cmd_line  index.html
coverage_artifacts/html/src/: example.c.func-c.html  example.c.func.html  example.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.c.func-c.html  main.c.func.html  main.c.gcov.html  multiply.cpp.func-c.html  multiply.cpp.func.html  multiply.cpp.gcov.html
docs/: GETTING_STARTED.md  USING_TEMPLATE.md
docs/docs-gen/latex/: create.sh
examples/: README.md  verification_harness.c
include/: example.h  multiply.hpp
lean/: AnvilVerification.lean  Main.lean  ProjectVerification.lean  README.md  lake-manifest.json  lakefile.toml
lean/AnvilVerification/: FFI.lean  Proof.lean  Specs.lean  Tests.lean
lean/AnvilVerification/ffi/: CppMultiplication.lean
lean/AnvilVerification/proof/: Addition.lean
lean/AnvilVerification/tests/: AdditionDiff.lean  MultiplicationDiff.lean
lean/ProjectVerification/: FFI.lean  Proof.lean  Specs.lean  Tests.lean
lean/ProjectVerification/ffi/: CAddition.lean
lean/ProjectVerification/proof/: Addition.lean
lean/ProjectVerification/specs/: Addition.lean  Multiplication.lean
lean/ProjectVerification/tests/: AdditionDiff.lean  MultiplicationDiff.lean
scripts/: create_lean_project.sh  setup_lean.sh
src/: example.c  main.c  multiply.cpp
tests/: test_example.c
